--- a/LDCC-84-3/app/src/main/res/values/strings.xml
+++ b/LDCC-84-3/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="welcome">We have it. WELCOME</string>
     <string name="recommend">I am sorry. We don\'t have it. This is my recommendation.</string>
     <string name="notfound">I am sorry. there is no product. But Other Seven Eleven have the product.</string>
+    <string name="currentpos">Current Position</string>
 </resources>
