UI 개선작업, 크래시 문제 1차 해결, 2차 발발 해결중

--- a/LDCC-84-3/app/src/main/res/values/strings.xml
+++ b/LDCC-84-3/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="recommend">I am sorry. We don\'t have it. This is my recommendation.</string>
     <string name="notfound">I am sorry. there is no product. But Other Seven Eleven have the product.</string>
     <string name="currentpos">Current Position</string>
+    <string name="title_activity_maps12">Map</string>
 </resources>
